# rp2040-canbus

./: .gitignore  Cargo.toml
hardware/: bom.txt  eagle.epf  ioniq-v2.brd  ioniq-v2.sch
src/: main.rs
