[package]
edition = "2021"
name = "rp2040-canbus"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"

panic-halt = "0.2"
panic-probe = { version = "0.3", features = ["print-defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"

embassy-executor = { version = "0.6", features = [
	"arch-cortex-m",
	"executor-thread",
	"defmt",
	"integrated-timers",
	"task-arena-size-8192",
] }
embassy-time = { version = "0.3", features = [
	"defmt",
	"defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.2", features = [
	"defmt",
	"time-driver",
	"critical-section-impl",
	"boot2-w25q080",
] }
embassy-embedded-hal = "0.2"
embassy-sync = "0.6"
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
heapless = { version = "0.8", features = ["defmt-03"] }
embedded-can = { git = "https://github.com/rust-embedded/embedded-hal.git", features = ["defmt-03"]}

mcp25xxfd = { path = "/home/petschekr/Documents/Software/mcp25xxFD", features = ["defmt"] }
bme280-rs = { version = "0.3.0", features = ["async"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
